# only-meme

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  Dockerfile  README.md  before_commit.sh  constants.py  main.py  pyproject.toml  setup.cfg
backend/common/: __init__.py  entity.py  exceptions.py  factory.py
backend/common/infrastructure/: schema.py  serializer.py
backend/common/infrastructure/repositories/: __init__.py  local_repository.py
backend/only_meme/: entities.py
backend/only_meme/post/: handler.py
backend/only_meme/post/infrastructure/: controller.py  schemas.py  serializers.py
backend/only_meme/post/infrastructure/adapters/: post_repository.py
backend/only_meme/post/protocols/: __init__.py  post_repository.py
backend/only_meme/services/: __init__.py  media_service.py  secret_service.py
backend/only_meme/user/: handler.py
backend/only_meme/user/infrastructure/: authentication.py  controller.py  schemas.py  serializers.py
backend/only_meme/user/infrastructure/adapters/: password_hasher.py  session_repository.py  user_repository.py
backend/only_meme/user/protocols/: __init__.py  password_hasher.py  session_repository.py  user_repository.py
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.module.ts
src/app/components/feed/: feed.component.html  feed.component.ts
src/app/components/header/: header.component.html
src/app/directive/: copy.directive.ts
src/app/login/: login.component.html
src/app/page/home/: home.component.ts  (+1 more)
(+48 files in other folders)
